feat(core): 新增 Jdeps 分析与模块化支持完善打包功能
- 添加 JdepsMojo，实现基于 jdeps 工具的项目依赖模块分析
- JPackageMojo 重构，支持非模块化、模块化及预构建运行时三种打包模式
- 自动检测模块化状态，使用 plexus-java 解析模块路径及类路径
- 支持通过 addModules 和 jlinkOptions 优化模块化运行时镜像构建
- 引入 MavenUtils 工具类，封装模块路径解析和 JDK jmods 路径查找
- 增加 PlatformUtils，实现操作系统平台及架构的检测
- 优化 jpackage 参数构建，合理添加平台专属选项与文件路径校验
- 引入构建产物重命名逻辑，添加平台、架构和版本信息
- 完善依赖复制与临时目录清理，提升打包流程稳定性和用户体验